# SmartHomeNE

./: .gitignore  CMakeLists.txt  DashboardView.qml  DeviceControlView.qml  Main.qml  StatisticsView.qml  device.cpp  device.h  homemanager.cpp  homemanager.h  main.cpp  room.cpp  room.h  simulationengine.cpp  simulationengine.h
.github/workflows/: android.yml
